# Vereinssoftware

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
backend/: Cargo.toml
backend/data/receipts/3f0ea772-bf34-49a1-a034-3501f815e811/: 3f0ea772-bf34-49a1-a034-3501f815e811.receipt
backend/data/receipts/e8f5a3ff-edb2-4207-8d72-31803a7ef06d/: e8f5a3ff-edb2-4207-8d72-31803a7ef06d.receipt
backend/migrations/: 001_initial.sql  002_enum_fields.sql  003_finance_schema.sql  004_transaction_categories.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/admins/: handlers.rs  model.rs  repository.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  tokens.rs
backend/src/field_definitions/: handlers.rs  model.rs  repository.rs
backend/src/finance/: bank_account.rs  category.rs  finance_auth.rs  finance_role.rs  handlers.rs  mod.rs  reconciliation.rs  transaction.rs
backend/src/members/: handlers.rs  mod.rs  model.rs  repository.rs
backend/src/roles/: handlers.rs  model.rs  repository.rs
backend/src/services/: mod.rs
backend/src/services/reconciliation/: manual.rs  mod.rs
backend/src/storage/: local.rs  mod.rs
backend/src/ws/: handler.rs
backend/tests/: lib.rs
backend/tests/finance/: mod.rs  test_bank_account.rs  test_create_transaction.rs  test_integration.rs  test_reconciliation.rs
backend/tests/storage/: mod.rs  test_local.rs
docs/: deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  main.ts
(+58 files in other folders)
